feat : 유효성 검사 및 예외처리 강화