@@ -15,11 +15,11 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ExchangeRequestService {
-
     private final ExchangeRequestRepository exchangeRequestRepository;
     private final UserRepository userRepository;
     private final CurrencyRepository currencyRepository;
@@ -27,28 +27,29 @@ public class ExchangeRequestService {
     @Transactional
     public ExchangeResponseDto createExchangeRequest(ExchangeRequestDto exchangeRequestDto) {
         User user = userRepository.findById(exchangeRequestDto.getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("Invalid user ID"));
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
         Currency currency = currencyRepository.findById(exchangeRequestDto.getCurrencyId())
-                .orElseThrow(() -> new IllegalArgumentException("Invalid currency ID"));
+                .orElseThrow(() -> new IllegalArgumentException("통화를 찾을 수 없습니다."));
 
-        BigDecimal exchangeRate = currency.getExchangeRate();
-        BigDecimal amountAfterExchange = exchangeRequestDto.getAmountBeforeExchange().divide(exchangeRate, 2, RoundingMode.HALF_UP);
+        BigDecimal amountAfterExchange = exchangeRequestDto.getAmountBeforeExchange()
+                .divide(currency.getExchangeRate(), 2, RoundingMode.HALF_UP);
 
-        ExchangeRequest exchangeRequest = new ExchangeRequest(user, currency, exchangeRequestDto.getAmountBeforeExchange(), amountAfterExchange, "normal");
+        ExchangeRequest exchangeRequest = exchangeRequestDto.toEntity(user, currency, amountAfterExchange, "normal");
         exchangeRequest = exchangeRequestRepository.save(exchangeRequest);
+
         return new ExchangeResponseDto(exchangeRequest);
     }
 
     public List<ExchangeResponseDto> getExchangeRequestsByUserId(Long userId) {
-        return exchangeRequestRepository.findByUserId(userId).stream().map(ExchangeResponseDto::new).toList();
+        List<ExchangeRequest> exchangeRequests = exchangeRequestRepository.findByUserId(userId);
+        return exchangeRequests.stream().map(ExchangeResponseDto::new).collect(Collectors.toList());
     }
 
     @Transactional
-    public ExchangeResponseDto cancelExchangeRequest(Long requestId) {
-        ExchangeRequest exchangeRequest = exchangeRequestRepository.findById(requestId)
-                .orElseThrow(() -> new IllegalArgumentException("Invalid request ID"));
+    public ExchangeResponseDto cancelExchangeRequest(Long id) {
+        ExchangeRequest exchangeRequest = exchangeRequestRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("환전 요청을 찾을 수 없습니다."));
         exchangeRequest.setStatus("cancelled");
-        exchangeRequest = exchangeRequestRepository.save(exchangeRequest);
         return new ExchangeResponseDto(exchangeRequest);
     }
 }
